force-app/main/default/objects/Subscription__c/fields/Data_Limit__c.field-meta.xml
<CustomField>
    <fullName>Data_Limit__c</fullName>
    <description>This formula adds storage limits based on product tiers</description>
    <formula>CASE( Product_Tier__c , 
&quot;Basic&quot;, 10, 
&quot;Professional&quot;, 50, 
&quot;Enterprise&quot;, 999999999999999999999999999999999999,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Limit (GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>