force-app/main/default/objects/Subscription__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The scheduled expiration date of the subscription. This field is the primary trigger for the Automated Renewal Flow and the Status formula.</description>
    <inlineHelpText>Enter the last day of the current subscription term.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>