force-app/main/default/objects/Subscription__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <description>The Monthly Recurring Revenue (MRR) for this subscription. Used to calculate total contract value and track financial performance.</description>
    <inlineHelpText>Enter the monthly fee for this subscription.</inlineHelpText>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>