force-app/main/default/objects/Subscription__c/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <description>Defines the service level agreement (SLA) and feature set for the subscription. Used for revenue segmentation and reporting.</description>
    <inlineHelpText>Select the subscription tier purchased by the customer.</inlineHelpText>
    <label>Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>