force-app/main/default/objects/Subscription__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The official commencement date of the subscription services. Used as the baseline for renewal calculations and contract duration.</description>
    <inlineHelpText>Enter the first day the subscription becomes active.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>