force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Automated lifecycle status for the subscription. Calculates &apos;Expired&apos;, &apos;Expiring Soon&apos; (within 30 days), or &apos;Active&apos; based on the End Date without manual user intervention.</description>
    <formula>IF( End_Date__c &lt; TODAY(), 
    &quot;Expired&quot;, 
    IF( End_Date__c - TODAY() &lt;= 30, 
        &quot;Expiring Soon&quot;, 
        &quot;Active&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>