force-app/main/default/objects/Subscription__c/fields/Total_Storage_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Total_Storage_Consumption__c</fullName>
    <description>Sum of all data storage recorded across all usage logs for this subscription. Essential for monitoring total volume consumption against plan limits.</description>
    <inlineHelpText>Total gigabytes of storage used throughout the lifetime of this subscription.</inlineHelpText>
    <label>Total Storage Consumption</label>
    <summarizedField>Usage_Log__c.Storage_Used_GB__c</summarizedField>
    <summaryForeignKey>Usage_Log__c.Subscription__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>