force-app/main/default/objects/Subscription__c/fields/Usage_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Usage_Utilization__c</fullName>
    <description>This formula shows the percentage, of allready used space by accounts</description>
    <formula>Total_Storage_Consumption__c  /  Data_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Utilization</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>