force-app/main/default/objects/Subscription__c/validationRules/End_Date_Must_Be_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_After_Start_Date</fullName>
    <active>true</active>
    <description>Prevents the subscription end date from being earlier than the start date.</description>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>The end date must be later than the start date!</errorMessage>
</ValidationRule>