force-app/main/default/objects/Subscription__c/validationRules/Lock_Everything_on_Closed_Subscription.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Everything_on_Closed_Subscription</fullName>
    <active>true</active>
    <description>An expired subscription, can not be changed.</description>
    <errorConditionFormula>Status__c =&quot;Expired&quot;</errorConditionFormula>
    <errorMessage>The subscription is already expired! You can create new subscription if needed.</errorMessage>
</ValidationRule>