force-app/main/default/objects/Subscription__c/validationRules/Monthly_Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Prevents zero or negative monthly payments from being entered.</description>
    <errorConditionFormula>Monthly_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Monthly_Amount__c</errorDisplayField>
    <errorMessage>The monthly fee must be greater than 0!</errorMessage>
</ValidationRule>